--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "vite-project",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://lucymorcombe.github.io/astroflop/",
   "type": "module",
   "scripts": {
     "dev": "vite",
